change image url making em easy to find and replace
so that we can replace elements like `](./pic/`

--- a/2022-0726.kunmingese-note-1.昆明话学习笔记_1_-_简介、单字调、双字调.zh-Hans.lang.md
+++ b/2022-0726.kunmingese-note-1.昆明话学习笔记_1_-_简介、单字调、双字调.zh-Hans.lang.md
@@ -1,5 +1,5 @@
 
-![中国语言地图集_汉语方言卷-西南官话云贵](pic/kunmingese-note-1/cover.jpg)
+![中国语言地图集_汉语方言卷-西南官话云贵](./pic/kunmingese-note-1/cover.jpg)
 
 因为爱情，加上我对语言和语言学很感兴趣，因此随缘学习昆明话~随缘更新昆明话学习记录。
 
@@ -66,7 +66,7 @@
 
 昆明话两个字的连读音变的调值总结为图。灰色表示未变，红色表示变化。
 
-![昆明话双字词的连读变调](pic/kunmingese-note-1/昆明话双字词的连读变调.png)
+![昆明话双字词的连读变调](./pic/kunmingese-note-1/昆明话双字词的连读变调.png)
 
 前字阴平的原始调值为44，若后字为阳平（31）、去声（21），则前字变为35。
 
@@ -94,7 +94,7 @@
 
 一些示例如图。
 
-![双字词连读变调的例词](pic/kunmingese-note-1/双字词连读变调的例词.png)
+![双字词连读变调的例词](./pic/kunmingese-note-1/双字词连读变调的例词.png)
 
 # 三字词的连读变调？
 
