kunmingese-note-1 add in-text TOC

--- a/2022-0726.kunmingese-note-1.昆明话学习笔记_1_-_简介、单字调、双字调.zh-Hans.lang.md
+++ b/2022-0726.kunmingese-note-1.昆明话学习笔记_1_-_简介、单字调、双字调.zh-Hans.lang.md
@@ -1,3 +1,13 @@
+- [基本思想](#基本思想)
+- [昆明方言简介](#昆明方言简介)
+- [调类](#调类)
+- [调值](#调值)
+- [单字调示例](#单字调示例)
+- [连读变调之双字调](#连读变调之双字调)
+- [双字调的小观察](#双字调的小观察)
+- [三字词的连读变调？](#三字词的连读变调)
+
+
 
 ![中国语言地图集_汉语方言卷-西南官话云贵](./pic/kunmingese-note-1/cover.jpg)
 
