--- a/2020-0424.crazy-spelling.有哪些离谱的字母组合读音？.zh-Hans.lang.md
+++ b/2020-0424.crazy-spelling.有哪些离谱的字母组合读音？.zh-Hans.lang.md
@@ -8,7 +8,7 @@
 
 首先想到法文~（下图来自微博@语言学bot）
 
-![法文](pic\crazy-spelling\crazy-spelling-french.webp)
+![法文](./pic/crazy-spelling/crazy-spelling-french.webp)
 
 当然，在法文、英文、藏文等文字中还能举出很多例子。老表音文字了。
 
@@ -20,17 +20,17 @@
 
 藏文：
 
-![藏文](pic/crazy-spelling/crazy-spelling-tibetan.jpg)
+![藏文](./pic/crazy-spelling/crazy-spelling-tibetan.jpg)
 
 上面这个是藏文「བརྒྱད」，意为数词「八」，与汉语的「八」同源，从字面来看是「brgyad」这么几个部件（包含上加字下加字以及不带附标时的默认元音），现代拉萨话发音是 /cɛː˩˧˨/。 本来巨发达的辅音丛和尾辅音很多都没了，而且演变的结果是辅音元音乍看上去都不太像原本的辅音元音了，并且拼写里没有哪个部件专门表示声调，要从语音演变规律推导出声调。
 
 # 传统蒙文
 
-![传统蒙文 uul](pic/crazy-spelling/crazy-spelling-mongol-uul.webp)
+![传统蒙文 uul](./pic/crazy-spelling/crazy-spelling-mongol-uul.webp)
 
 上面是蒙文「 ᠠᠭᠤᠯᠠ 」，意思是「山」，字面上来看是「aɣula」这么几个部件，但现在发音（各地发音不尽相同，维基词典上估计是乌兰巴托口音，供参考）是 [o̙ːɮ]，外蒙一般用的西里尔字母是按发音转写的，所以写成「уул」。
 
-![传统蒙文 uns](pic/crazy-spelling/crazy-spelling-mongol-uns.jpg)
+![传统蒙文 uns](./pic/crazy-spelling/crazy-spelling-mongol-uns.jpg)
 
 上面这个是传统蒙文「 ᠦᠨᠡᠰᠦ 」，意思是「灰烬」，各个部件直接转写成拉丁字母是「ünesü」，但后面几个元音都不发音了，现代发音是 /uns/，西里尔字母写成「үнс」。
 
