--- a/2021-0915.about-me.About_Me.en.life.md
+++ b/2021-0915.about-me.About_Me.en.life.md
@@ -27,9 +27,11 @@ In languages that have Sino-Xenic pronunciation systems, I would prefer Sino-Xen
 
 In other languages, we could use an imitation of the Putonghua sound, Yang Chenxi.
 
-By the way, my English name is Ethan if you prefer the English name. 
-I chose the English name mostly because E-Than-Yang sounds like Xi-Chen-Yang and Hei-San-Yeung,
+By the way, my English name is Chauncey if you prefer the English name. 
+Previously I chose Ethan, mostly because E-Than-Yang sounds like Xi-Chen-Yang and Hei-San-Yeung,
 which are Mandarin and Cantonese pronunciations of my Chinese name reversed.
+But in my daily life I still feel it confusing which name should I use in every circumtance.
+Therefore, I turn to Chauncey which is very close to my Chinese name in my mother tongues.
 
 # The Domain Name
 
