--- a/2021-0915.about-me.关于我.zh-Hans.life.md
+++ b/2021-0915.about-me.关于我.zh-Hans.life.md
@@ -26,7 +26,7 @@
 
 对于其他语言，可以模仿中原官话或普通话发音。
 
-如果使用英文名更方便，我的英文名为 Ethan。我选这个名字主要是因为 Ethan Yang 听起来有一点点像我的名字倒过来，「曦晨杨」，至少是它的中原官话、普通话、广府话发音。
+如果使用英文名更方便，我的英文名为 Chauncey。之前我选过 Ethan 这个名字，主要是因为 Ethan Yang 听起来有一点点像我的名字倒过来，「曦晨杨」，至少是它的中原官话、普通话、广府话发音。不过我在生活中仍然很困惑什么時候用什么名字，所以改成 Chauncey 更方便，因为它发音很接近我本名的母语发音。
 
 # 本站域名
 
