--- a/2021-0915.about-me.關於我.zh-Hant.life.md
+++ b/2021-0915.about-me.關於我.zh-Hant.life.md
@@ -26,7 +26,7 @@
 
 對於其他語言，可以模仿中原官話或普通話發音。
 
-如果使用英文名更方便，我的英文名爲 Ethan。我選這個名字主要是因爲 Ethan Yang 聽起來有一點點像我的名字倒過來，「曦晨楊」，至少是它的中原官話、普通話、廣府話發音。
+如果使用英文名更方便，我的英文名爲 Chauncey。之前我選過 Ethan 這個名字，主要是因爲 Ethan Yang 聽起來有一點點像我的名字倒過來，「曦晨楊」，至少是它的中原官話、普通話、廣府話發音。不過我在生活中仍然很困惑什麼時候用什麼名字，所以改成 Chauncey 更方便，因爲它發音很接近我本名的母語發音。
 
 # 本站域名
 
