about-me add latin name and other names

--- a/2021-0915.about-me.关于我.zh-Hans.life.md
+++ b/2021-0915.about-me.关于我.zh-Hans.life.md
@@ -20,13 +20,17 @@
 
 我的名字原本为我的两门母语而创作：一种中原官话以及普通话。发音分别为 /jɑ̃⁵³. t͡ʂʰә̃ ⁵³. ɕi²¹³/ 和 /jɑŋ³⁵. t͡ʂʰən³⁵. ɕi⁵⁵/。
 
-对于汉语的其他变体，按传统念这三个汉字即可，文白异读按当地方言习惯。例如，昆明话（西南官话）为 /jä̃³¹ t͡ʂʰɐn³¹ ɕi⁴⁴/，粤语广府话为 /jœ:ŋ²¹ sɐn²¹ hei⁵⁵/ （Joeng⁴ San⁴hei¹），吴语上海话为 /ɦiã¹¹³ zən¹¹³⁻²² ɕi⁵³⁻⁴⁴/，闽南语第一优势腔为 /iũ²⁴ sin²⁴ hi⁵⁵/ （Iûnn Sîn-hi）。
+对于汉语的其他变体，按传统念这三个汉字即可，文白异读按当地方言习惯。例如，昆明话（西南官话）为 /jä̃³¹ t͡ʂʰɐn³¹ ɕi⁴⁴/，粤语广府话为 /jœ:ŋ²¹ sɐn²¹ hei⁵⁵/ （Joeng⁴ San⁴hei¹），吴语上海话为 /ɦiã¹¹³ zən¹¹³⁻²² ɕi⁵³⁻⁴⁴/，闽南语第一优势腔为 /iũ²⁴ sin²⁴ hi⁵⁵/ （Iûnn Sîn-hi）。我常用的架空语言丌通语的汉字音读为 EerZ T8eH XQea，建议罗马化为 Iang Djin-Hrie。
 
 对于有汉字词系统（音读）的语言，我倾向于使用汉字音，而非使用现地音。例如，日语为楊（よう）晨曦（しんぎ）（Yō Shingi），韩语为양신희（Yang Sin-hui），越南语为 Dương Thần Hi。
 
 对于其他语言，可以模仿中原官话或普通话发音。
 
 如果使用英文名更方便，我的英文名为 Chauncey。之前我选过 Ethan 这个名字，主要是因为 Ethan Yang 听起来有一点点像我的名字倒过来，「曦晨杨」，至少是它的中原官话、普通话、广府话发音。不过我在生活中仍然很困惑什么時候用什么名字，所以改成 Chauncey 更方便，因为它发音很接近我本名的母语发音。
+
+如果使用拉丁文名更方便，可以考虑 Censius Ianus （来自官话）或 Ginchrius Ianus （来自丌通语音读）。
+
+尚有朵牛（Dnm2Zdn，TuåNgyu，Tuanius）、Pusto 等其他名字，以防本名尴尬。
 
 # 本站域名
 
