about-me update name desc

--- a/2021-0915.about-me.About_Me.en.life.md
+++ b/2021-0915.about-me.About_Me.en.life.md
@@ -21,9 +21,9 @@ My name was designed originally for my two mother tongues, one is a kind of Cent
 Putonghua (Modern Standard Mandarin Chinese). It is pronounced /jɑ̃⁵³. t͡ʂʰә̃ ⁵³. ɕi²¹³/ and /jɑŋ³⁵. t͡ʂʰən³⁵. ɕi⁵⁵/, respectively. For them, the only difference in the pronunciation of my name happened to
 be almost only in the tone values (but the tone classes are the same: yángpíng, yángpíng and yīnpíng).
 
-In other varieties of Chinese language, I would prefer it be pronounced as Chinese names are supposed to be. For example, /jä̃³¹ t͡ʂʰɐn³¹ ɕi⁴⁴/ in Kunming Southwestern Mandarin, /jœ:ŋ²¹ sɐn²¹ hei⁵⁵/ (Joeng⁴ San⁴hei¹) in Yuehai Cantonese, /ɦiã¹¹³ zən¹¹³⁻²² ɕi⁵³⁻⁴⁴/ in Shanghai Wu Chinese (Shanghainese), /iũ²⁴ sin²⁴ hi⁵⁵/ (Iûnn Sîn-hi) in Hokkien. In the Rimduk (Sino-Xenic) system of my conlang Ttomni, the name is EerZ T8eH XQea, and its recommended romanization is Iang Djin-Hrie.
+In other varieties of Chinese language, I would prefer it be pronounced as Chinese names are supposed to be. For example, /jä̃³¹ t͡ʂʰɐn³¹ ɕi⁴⁴/ in Kunming Southwestern Mandarin, /jœ:ŋ²¹ sɐn²¹ hei⁵⁵/ (Joeng⁴ San⁴hei¹) in Yuehai Cantonese, /ɦiã¹¹³ zən¹¹³⁻²² ɕi⁵³⁻⁴⁴/ in Shanghai Wu Chinese (Shanghainese), /iũ²⁴ sin²⁴ hi⁵⁵/ (Iûnn Sîn-hi) in Hokkien. 
 
-In languages that have Sino-Xenic pronunciation systems, I would prefer Sino-Xenic pronunciations. For example, 楊（よう）晨曦（しんぎ） (Yō Shingi) in Japanese, 양신희 (Yang Sin-hui) in Korean, Dương Thần Hi in Vietnamese.
+In languages that have Sino-Xenic pronunciation systems, I would prefer Sino-Xenic pronunciations. For example, 楊（よう）晨曦（しんぎ） (Yō Shingi) in Japanese, 양신희 (Yang Sin-hui) in Korean, Dương Thần Hi in Vietnamese. In the Rimduk (Sino-Xenic) system of my conlang Ttomni, the name is EerZ T8eH XQea, and its recommended romanization is Iang Djin-Hrie.
 
 In other languages, we could use an imitation of the Putonghua sound, Yang Chenxi.
 
@@ -35,7 +35,7 @@ Therefore, I turn to Chauncey which is very close to my Chinese name in my mothe
 
 If you prefer latinized names, consider Censius Ianus (from Mandarin) or Ginchrius Ianus (from Ttomni Sino-Xenic system).
 
-There are also names like 朵牛 (Dnm2Zdn, TuåNgyu, Tuanius), Pusto etc., in case a real name seems embarrassing.
+There are also names like 朵牛 (Dnm2Zdn, TuåNgyu, TuåŊyu, Tuanius), Pusto etc., in case a real name seems embarrassing.
 
 # The Domain Name
 
