--- a/2021-0915.about-me.關於我.zh-Hant.life.md
+++ b/2021-0915.about-me.關於我.zh-Hant.life.md
@@ -20,9 +20,9 @@
 
 我的名字原本爲我的兩門母語而創作：一種中原官話以及普通話。發音分別爲 /jɑ̃⁵³. t͡ʂʰә̃ ⁵³. ɕi²¹³/ 和 /jɑŋ³⁵. t͡ʂʰən³⁵. ɕi⁵⁵/。
 
-對於漢語的其他變體，按傳統唸這三個漢字即可，文白異讀按當地方言習慣。例如，昆明話（西南官話）爲 /jä̃³¹ t͡ʂʰɐn³¹ ɕi⁴⁴/，粵語廣府話爲 /jœ:ŋ²¹ sɐn²¹ hei⁵⁵/ （Joeng⁴ San⁴hei¹），吳語上海話爲 /ɦiã¹¹³ zən¹¹³⁻²² ɕi⁵³⁻⁴⁴/，閩南語第一優勢腔爲 /iũ²⁴ sin²⁴ hi⁵⁵/ （Iûnn Sîn-hi）。我常用的架空語言丌通語的漢字音讀爲 EerZ T8eH XQea，建議羅馬化爲 Iang Djin-Hrie。
+對於漢語的其他變體，按傳統唸這三個漢字即可，文白異讀按當地方言習慣。例如，昆明話（西南官話）爲 /jä̃³¹ t͡ʂʰɐn³¹ ɕi⁴⁴/，粵語廣府話爲 /jœ:ŋ²¹ sɐn²¹ hei⁵⁵/ （Joeng⁴ San⁴hei¹），吳語上海話爲 /ɦiã¹¹³ zən¹¹³⁻²² ɕi⁵³⁻⁴⁴/，閩南語第一優勢腔爲 /iũ²⁴ sin²⁴ hi⁵⁵/ （Iûnn Sîn-hi）。
 
-對於有漢字詞系統（音讀）的語言，我傾向於使用漢字音，而非使用現地音。例如，日語爲楊（よう）晨曦（しんぎ）（Yō Shingi），韓語爲양신희（Yang Sin-hui），越南語爲 Dương Thần Hi。
+對於有漢字詞系統（音讀）的語言，我傾向於使用漢字音，而非使用現地音。例如，日語爲楊（よう）晨曦（しんぎ）（Yō Shingi），韓語爲양신희（Yang Sin-hui），越南語爲 Dương Thần Hi。我常用的架空語言丌通語的漢字音讀爲 EerZ T8eH XQea，建議羅馬化爲 Iang Djin-Hrie。
 
 對於其他語言，可以模仿中原官話或普通話發音。
 
@@ -30,7 +30,7 @@
 
 如果使用拉丁文名更方便，可以考慮 Censius Ianus （來自官話）或 Ginchrius Ianus （來自丌通語音讀）。
 
-尚有朵牛（Dnm2Zdn，TuåNgyu，Tuanius）、Pusto 等其他名字，以防本名尷尬。
+尚有朵牛（Dnm2Zdn，TuåNgyu，TuåŊyu，Tuanius）、Pusto 等其他名字，以防本名尷尬。
 
 # 本站域名
 
