heozei-pinyin fix 国际

--- a/2023-0301.heozei-pinyin.论中原官话兖菏片菏泽话拼音方案.zh-Hans.lang.md
+++ b/2023-0301.heozei-pinyin.论中原官话兖菏片菏泽话拼音方案.zh-Hans.lang.md
@@ -1,6 +1,6 @@
 **注意：以菏泽话书写，其正字法尚不系统。**
 
-2月21号世界母语日（/kuo˥˥ tɕi˧˩˨ mu˥˧ y˥˥ ʐɻ̩˨˩˦/）那天想咯一下菏泽话嘞音系，接下来几天儿又偶尔跟人讨论咯一下啲。反正关于菏泽话嘞音系跟一些字儿嘞字音演变，还有血多细节得再研究研究。
+2月21号国际母语日（/kuo˥˥ tɕi˧˩˨ mu˥˧ y˥˥ ʐɻ̩˨˩˦/）那天想咯一下菏泽话嘞音系，接下来几天儿又偶尔跟人讨论咯一下啲。反正关于菏泽话嘞音系跟一些字儿嘞字音演变，还有血多细节得再研究研究。
 
 除咯这些语言学细节，我也血想弄个菏泽话嘞拼音方案。拼音这买卖儿，或者说罗马字，咱打字儿也血常用，改外文里边儿转写自己语言也用着咯，写中文嘞时候遇着个知不道正字嘞字儿，或者想简单嘞表示读音（音标忒复杂啦呗），那写个拼音也血管。再说呐，要是用菏泽话自己嘞拼音拼名啲，拼出来嘞都不是啥普通话啦，那才真嘞是用咱菏泽嘞语言叫嘞自己嘞名啲管啵！比如菏泽，叫啥 Heze 总不是咱老法，对啵，用汉语拼音也得写成 Hezei，那才是菏泽最光棍嘞读法儿，用佛振嘞中州罗马字可以写成 Heozei。
 
