更新 关于我

--- a/2023-0224.about-me.About_Me.en.life.md
+++ b/2023-0224.about-me.About_Me.en.life.md
@@ -1,11 +1,12 @@
 - [My Interests](#my-interests)
 
 
-Hello, my name is TwaqNgu and here is my website.
+Hello, my name is 东牛 Pusto and here is my website.
 
 # My Interests
 
+- Industrial Development (Aerospace, Automotive, Semiconductors, Energy, Medical Engineering)
 - Languages and Linguistics
 - Computer Science and Software Development
-- World-building
-- Geography and Travelling
+- World-building, Science Fiction
+- Geography, History and Travelling
