--- a/2023-0224.about-me.aCLqSqv.tto.life.md
+++ b/2023-0224.about-me.aCLqSqv.tto.life.md
@@ -1,10 +1,11 @@
 - [AemmVe](#aemmve)
 
-em! aCL S v X hnCLo LrnKrHL.
+em! aCL S v X DonZZn hnCLo LrnKrHL.
 
 # AemmVe
 
+- YnZh
 - SrHM
 - AoVh
 - JyrZ
-- YaoYKrhv oL NLiL 7fva
+- YaoYKrhv oL SaAWQ2 oL NLiL 7fva
