--- a/2023-0224.about-me.Über_Mich.de.life.md
+++ b/2023-0224.about-me.Über_Mich.de.life.md
@@ -4,7 +4,8 @@ Hallo, ich bin TwaqNgu. Herzlich willkommen auf meiner Webseite!
 
 # Persönliche Interessen
 
+- Industrieentwicklung (Luft- und Raumfahrt, Automobilindustrie, Halbleiter, Energie, Medizintechnik)
 - Sprachen und Sprachwissenschaft
 - Informatik und Softwareentwicklung 
-- Weltbasteln
-- Geografie und Reisen
+- Weltbasteln, Science-Fiction
+- Geografie, Geschichte und Reisen
