--- a/2023-0224.about-me.關於我.zh-Hant.life.md
+++ b/2023-0224.about-me.關於我.zh-Hant.life.md
@@ -2,11 +2,12 @@
 - [個人興趣](#個人興趣)
 
 
-你好，我叫朵牛，歡迎來到我的主頁。
+你好，我叫 东牛 Pusto，歡迎來到我的主頁。
 
 # 個人興趣
 
+- 工業發展（航空航天、汽車、半導體、能源、醫學工程）
 - 語言與語言學
 - 計算機科學與軟件開發
-- 架空世界建構
-- 地理與旅行
+- 架空世界建構、科幻
+- 地理、歷史與旅行
