--- a/2023-0224.about-me.关于我.zh.life.md
+++ b/2023-0224.about-me.关于我.zh.life.md
@@ -2,12 +2,13 @@
 - [个人兴趣](#个人兴趣)
 
 
-你好，我叫朵牛，欢迎来到我的主页。
+你好，我叫东牛 Pusto，欢迎来到我的主页。
 
 # 个人兴趣
 
+- 工业发展（航空航天、汽车、半导体、能源、医学工程）
 - 语言与语言学
 - 计算机科学与软件开发
-- 架空世界建构
-- 地理与旅行
+- 架空世界建构、科幻
+- 地理、历史与旅行
 
