--- a/2023-0224.about-me.私について.ja.life.md
+++ b/2023-0224.about-me.私について.ja.life.md
@@ -1,10 +1,11 @@
 - [興味](#興味)
 
-こんにちは！朵牛（だぎゅう）と申します。ようこそ私のサイトへ。
+こんにちは！东牛 Pusto と申します。ようこそ私のサイトへ。
 
 # 興味
 
+- 産業の発展（航空宇宙、車、半導体、エネルギー、医療工学）
 - 言語と言語学
 - 情報工学とソフト開発
-- 世界作り
-- 地理学と旅行
+- 世界作り、サイエンスフィクション
+- 地理学、歴史と旅行
